Added a home page with the disclaimer

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <!-- <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+    </ion-buttons> -->
     <ion-title>
       Home
     </ion-title>
@@ -10,7 +10,23 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the
-    <a target="_blank" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <p>
+    This application is a totally unauthorized add-on for the very popular Mario Kart 8 by Nintendo for the Wii U&trade;.
+  </p>
+  <p>
+    The app came about because my family plays Mario Kart for hours at a time. After a while, we discovered that each of us tended
+    to favor the same character and kart combination.
+  </p>
+  <p>
+    We started by throwing dice for each player, kart, tire, and glider combination. It took a while, and it's hard to find 18-sided
+    dice. We had to come up with something a little simpler.
+  </p>
+  <p>
+    We have taken great care not to use any proprietary assets. Everything, to our knowledge, is fan created. While we believe
+    we have not infringed on any copyrights or violated any trademarks, there is always the potential that Nintendo could
+    come in an shut this app down.
+  </p>
+  <ion-button expand="block">
+    I agree. Let's go!
+  </ion-button>
 </ion-content>
