--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,7 +23,7 @@
     we have not infringed on any copyrights or violated any trademarks, there is always the potential that Nintendo could
     come in an shut this app down.
   </p>
-  <ion-button expand="block">
+  <ion-button expand="block" routerLink="/slots">
     I agree. Let's go!
   </ion-button>
 </ion-content>
