--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -10,5 +10,5 @@
 </ion-header>
 
 <ion-content padding>
-  <mk-container [items]="characters">
+  <mk-container [items]="characters"></mk-container>
 </ion-content>
