--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // ----------------------------------------------------------------------------
 // Put style rules here that you want to apply globally. These styles are for
@@ -14,3 +13,11 @@
 // To declare rules for a specific mode, create a child rule for the .md, .ios,
 // or .wp mode classes. The mode class is automatically applied to the <body>
 // element in the app.
+
+ion-router-outlet {
+    ion-scroll {
+        background-image: url("assets/images/background.png");
+        background-size: cover;
+        background-position: center;
+    }
+}
