--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -12,7 +12,7 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col *ngFor="let player of players">
+      <ion-col *ngFor="let player of players" col-6 col-sm-3>
         <ion-row>
           <mk-container [items]="characters"></mk-container>
         </ion-row>
