--- a/src/app/pages/slots/slots.page.scss
+++ b/src/app/pages/slots/slots.page.scss
@@ -1,5 +1,8 @@
-ion-col {
-    ion-row {
-        margin-bottom: 5px;
+ion-row {
+    margin-bottom: 5px;
+
+    mk-container, ion-button {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
