--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -17,7 +17,7 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col *ngFor="let player of players" col-6 col-sm-3>
+      <ion-col *ngFor="let player of players; let i = index" col-6 col-sm-3>
         <ion-row>
           <mk-container #character [items]="characters"></mk-container>
         </ion-row>
@@ -31,7 +31,7 @@
           <mk-container #glider [items]="gliders"></mk-container>
         </ion-row>
         <ion-row>
-          <ion-button size="small" expand="block">
+          <ion-button size="small" expand="block" (click)="shuffleItems(i)">
             {{ player }}
           </ion-button>
         </ion-row>
