Added an explicit Character and Vehicle type

--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -26,7 +26,7 @@
       <h2>Vehicles</h2>
     </ion-card-header>
     <ion-card-content>
-      <div color="danger" *ngIf="!isValidVehicles">
+      <div *ngIf="!isValidVehicles">
         <ion-icon name="warning" color="danger"></ion-icon>
         You need to select at least one vehicle type.
       </div>
