--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Settings</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -32,7 +35,7 @@
       </div>
       <ion-item *ngFor="let type of VehicleType | enum">
         <ion-label>Include {{ VehicleType[type] }}</ion-label>
-        <ion-checkbox [checked]="isVehicleEnabled(type)" (ionChange)="enableVehicle(size, $event.detail.checked)"></ion-checkbox>
+        <ion-checkbox [checked]="isVehicleEnabled(type)" (ionChange)="enableVehicle(type, $event.detail.checked)"></ion-checkbox>
       </ion-item>
     </ion-card-content>
   </ion-card>
