--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -14,10 +14,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col *ngFor="let player of players; let i = index" col-6 col-sm-3>
+      <ion-col *ngFor="let player of players; let i = index" col-3>
         <ion-row>
           <mk-container #character [items]="characters"></mk-container>
         </ion-row>
