--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -19,16 +19,16 @@
     <ion-row>
       <ion-col *ngFor="let player of players; let i = index" col-3>
         <ion-row>
-          <mk-container #character [items]="characters"></mk-container>
+          <mk-container #character [items]="characters" (click)="shuffleCharacter(character)"></mk-container>
         </ion-row>
         <ion-row>
-          <mk-container #vehicle [items]="vehicles"></mk-container>
+          <mk-container #vehicle [items]="vehicles" (click)="shuffleVehicle(vehicle)"></mk-container>
         </ion-row>
         <ion-row>
-          <mk-container #wheel [items]="wheels"></mk-container>
+          <mk-container #wheel [items]="wheels" (click)="shuffleWheel(wheel)"></mk-container>
         </ion-row>
         <ion-row>
-          <mk-container #glider [items]="gliders"></mk-container>
+          <mk-container #glider [items]="gliders" (click)="shuffleGlider(glider)"></mk-container>
         </ion-row>
         <ion-row>
           <ion-button size="small" expand="block" (click)="shuffleItems(i)">
