Fixed the Player button colors (#2)
* Changing button colors for Player on slots page

* Update slots.page.ts

* Update slots.page.html

* Fixed color list

* Combined player name and color into a single object

--- a/src/app/pages/slots/slots.page.html
+++ b/src/app/pages/slots/slots.page.html
@@ -31,8 +31,8 @@
           <mk-container #glider [items]="gliders" (click)="shuffleGlider(glider)"></mk-container>
         </ion-row>
         <ion-row>
-          <ion-button size="small" expand="block" (click)="shuffleItems(i)">
-            {{ player }}
+          <ion-button size="small" [color]="player.color" expand="block" (click)="shuffleItems(i)">
+            {{ player.name }}
           </ion-button>
         </ion-row>
       </ion-col>
